[package]
name = "eotwsink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["multipart"] }
chrono = "0.4.42"
sanitize-filename = "0.6.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-util = "0.7.17"
tower = "0.5.2"
walkdir = "2.5.0"
zip = "6.0.0"
